--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "tsc && cp src/dummy-data/*.json dist && node dist/app.js ",
     "lint": "eslint . --ext .ts",
     "clean": "rm -rf dist",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "vitest"
   },
   "keywords": [],
   "author": "",
@@ -18,7 +18,8 @@
     "@typescript-eslint/eslint-plugin": "^6.7.3",
     "@typescript-eslint/parser": "^6.7.3",
     "eslint": "^8.50.0",
-    "typescript": "^5.2.2"
+    "typescript": "^5.2.2",
+    "vitest": "^0.34.5"
   },
   "dependencies": {
     "express": "^4.18.2"
